add images and styling.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
   <div class="container">
 
     <div class="row" id="top-row">
-      <div class="col-md-4">
-        <p>image goes here</p>
-      </div>
-      <div class="col-md-8">
+      <div class="col-md-12">
         <h1>Programming Path Helper</h1>
       </div>
     </div>
@@ -25,19 +22,19 @@
       <div class="col-md-12" id="survey-holder">
         <div class="row">
 
-          <div class="col-2" id="q1-content">
+          <div class="survey-q" id="q1-content">
             <h4>question1</h4>
           </div>
-          <div class="col-2" id="q2-content">
+          <div class="survey-q" id="q2-content">
             <h4>question2</h4>
           </div>
-          <div class="col-2" id="q3-content">
+          <div class="survey-q" id="q3-content">
             <h4>question3</h4>
           </div>
-          <div class="col-2" id="q4-content">
+          <div class="survey-q" id="q4-content">
             <h4>question4</h4>
           </div>
-          <div class="col-2" id="q5-content">
+          <div class="survey-q" id="q5-content">
             <h4>question5</h4>
           </div>
 
@@ -47,7 +44,7 @@
     <div class="row" id="results-row">
 
       <div class="card" style="width: 18rem;" id="Ruby">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/ruby.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Ruby</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -56,7 +53,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="c#">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/csharp.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">C#</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -65,7 +62,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="javascript">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/js.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -74,7 +71,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="go">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/go.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Go</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,7 +80,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="python">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/python.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Python</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -92,7 +89,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="rust">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/rust.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Rust</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -101,7 +98,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="swift">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="img/swift.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Swift</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
