--- a/index.html
+++ b/index.html
@@ -11,33 +11,48 @@
 </head>
 
 <body>
-  <div class="container">
+  <div>
 
     <div class="row" id="top-row">
       <div class="col-md-12">
-        <h1>Programming Path Helper</h1>
+        <h1>What Language Fits You?</h1>
       </div>
     </div>
     <div class="row" id="survey-row">
       <div class="col-md-12" id="survey-holder">
         <div class="row">
+          <div class="container">
+            <p><em>Do you ever wonder what path you should take to find a job as a developer in the technology field? What language should you focus on? These questions can be overwhelming. </em></p>
+            <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you?</p>
+            <p>Please take our quick survey and we'll help find a match that is "guarenteed" to match your personality.</p>
 
-          <div class="survey-q" id="q1-content">
-            <h4>question1</h4>
-          </div>
-          <div class="survey-q" id="q2-content">
-            <h4>question2</h4>
-          </div>
-          <div class="survey-q" id="q3-content">
-            <h4>question3</h4>
-          </div>
-          <div class="survey-q" id="q4-content">
-            <h4>question4</h4>
-          </div>
-          <div class="survey-q" id="q5-content">
-            <h4>question5</h4>
-          </div>
+            <div class="survey-q" id="q1-content">
+              <h4>Do you like animals?</h4>
+              <div class="form-group">
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option value="2">OMG, I NEED the cuddles all the time!</option>
+                  <option value="1">Heck yeah!</option>
+                  <option value="0">Indifferent</option>
+                  <option value="-1">I've got an allergy...</option>
+                  <option value="-2">I'm a terrible person and I hate animals</option>
+                </select>
+              </div>
+            </div>
+            <div class="survey-q" id="q2-content">
+              <h4>question2</h4>
+            </div>
+            <div class="survey-q" id="q3-content">
+              <h4>question3</h4>
+            </div>
+            <div class="survey-q" id="q4-content">
+              <h4>question4</h4>
+            </div>
+            <div class="survey-q" id="q5-content">
+              <h4>question5</h4>
+            </div>
 
+
+          </div>
         </div>
       </div>
     </div>
