define variable in jquery

--- a/index.html
+++ b/index.html
@@ -24,22 +24,31 @@
           <div class="container">
             <p><em>Do you ever wonder what path you should take to find a job as a developer in the technology field? What language should you focus on? These questions can be overwhelming. </em></p>
             <p>We've developed a "scientifically" proven method to determine where you should focus your energies. Instead of asking a square peg to fit in a round hole, we've centered the question around you. Which language best fits you?</p>
-            <p>Please take our quick survey and we'll help find a match that is "guarenteed" to match your personality.</p>
+            <p>Please take our quick survey and we'll help you find a match that is "guarenteed" to match your personality.</p>
 
             <div class="survey-q" id="q1-content">
               <h4>Do you like animals?</h4>
               <div class="form-group">
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option value="2">OMG, I NEED the cuddles all the time!</option>
+                <select class="form-control" id="q1-ui">
+                  <option value="">please choose one</option>
                   <option value="1">Heck yeah!</option>
-                  <option value="0">Indifferent</option>
                   <option value="-1">I've got an allergy...</option>
-                  <option value="-2">I'm a terrible person and I hate animals</option>
+                  <option value="0">I could take or leave them</option>
+                  <option value="2">omg, I NEED the cuddles all the time!</option>
+                  <option value="-2">I hate animals (and I'm a terrible person)</option>
                 </select>
               </div>
             </div>
             <div class="survey-q" id="q2-content">
-              <h4>question2</h4>
+              <h4>What is your color do you prefer?</h4>
+              <select class="form-control" id="q2-ui">
+                <option value="">please choose one</option>
+                <option value="1">Red</option>
+                <option value="1">Purple</option>
+                <option value="1">Blue</option>
+                <option value="1">Yellow</option>
+                <option value="1">I care more about textures...</option>
+              </select>
             </div>
             <div class="survey-q" id="q3-content">
               <h4>question3</h4>
@@ -50,6 +59,12 @@
             <div class="survey-q" id="q5-content">
               <h4>question5</h4>
             </div>
+
+            <div class="button">
+              <button class="submit" type="button" name="button" id"submit">Submit</button>
+            </div>
+
+
 
 
           </div>
