add more questions and jquery logic

--- a/index.html
+++ b/index.html
@@ -43,21 +43,45 @@
               <h4>What is your color do you prefer?</h4>
               <select class="form-control" id="q2-ui">
                 <option value="">please choose one</option>
-                <option value="1">Red</option>
-                <option value="1">Purple</option>
-                <option value="1">Blue</option>
-                <option value="1">Yellow</option>
-                <option value="1">I care more about textures...</option>
+                <option value="r">Red</option>
+                <option value="p">Purple</option>
+                <option value="b">Blue</option>
+                <option value="y">Yellow</option>
+                <option value="t">I care more about textures...</option>
               </select>
             </div>
             <div class="survey-q" id="q3-content">
-              <h4>question3</h4>
+              <h4>If you were a shape, how easily could I roll you?</h4>
+              <select class="form-control" id="q3-ui">
+                <option value="">please choose one</option>
+                <option value="1">It would be hard</option>
+                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
+                <option value="1">I like curves and lines.</option>
+                <option value="1">Give me a full picture. Basic shapes are boring</option>
+                <option value="1">I demand complexity</option>
+              </select>
             </div>
             <div class="survey-q" id="q4-content">
               <h4>question4</h4>
+              <select class="form-control" id="q4-ui">
+                <option value="">please choose one</option>
+                <option value="1">The more sides the better</option>
+                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
+                <option value="1">I like curves and lines.</option>
+                <option value="1">Give me a full picture. Basic shapes are boring</option>
+                <option value="1">I demand complexity</option>
+              </select>
             </div>
             <div class="survey-q" id="q5-content">
               <h4>question5</h4>
+              <select class="form-control" id="q5-ui">
+                <option value="">please choose one</option>
+                <option value="1">The more sides the better</option>
+                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
+                <option value="1">I like curves and lines.</option>
+                <option value="1">Give me a full picture. Basic shapes are boring</option>
+                <option value="1">I demand complexity</option>
+              </select>
             </div>
 
             <div class="button">
@@ -74,7 +98,7 @@
     <div class="row" id="results-row">
 
       <div class="card" style="width: 18rem;" id="Ruby">
-        <img class="card-img-top" src="img/ruby.jpg" alt="Card image cap">
+        <img class="card-img-top" src="img/ruby.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Ruby</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,7 +107,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="c#">
-        <img class="card-img-top" src="img/csharp.png" alt="Card image cap">
+        <img class="card-img-top" src="img/csh.svg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">C#</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -92,7 +116,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="javascript">
-        <img class="card-img-top" src="img/js.jpg" alt="Card image cap">
+        <img class="card-img-top" src="img/js.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -101,7 +125,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="go">
-        <img class="card-img-top" src="img/go.jpg" alt="Card image cap">
+        <img class="card-img-top" src="img/go.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Go</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -110,7 +134,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="python">
-        <img class="card-img-top" src="img/python.jpg" alt="Card image cap">
+        <img class="card-img-top" src="img/python.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Python</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -128,7 +152,7 @@
       </div>
 
       <div class="card" style="width: 18rem;" id="swift">
-        <img class="card-img-top" src="img/swift.jpg" alt="Card image cap">
+        <img class="card-img-top" src="img/swift.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Swift</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
