add a bit of styling and js logic to responses

--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                   <option value="">please choose one</option>
                   <option value="1">Heck yeah!</option>
                   <option value="-1">I've got an allergy...</option>
-                  <option value="0">I could take or leave them</option>
                   <option value="2">omg, I NEED the cuddles all the time!</option>
                   <option value="-2">I hate animals (and I'm a terrible person)</option>
                 </select>
               </div>
             </div>
             <div class="survey-q" id="q2-content">
-              <h4>What is your color do you prefer?</h4>
+              <h4>What color do you prefer?</h4>
               <select class="form-control" id="q2-ui">
                 <option value="">please choose one</option>
                 <option value="r">Red</option>
@@ -51,41 +50,34 @@
               </select>
             </div>
             <div class="survey-q" id="q3-content">
-              <h4>If you were a shape, how easily could I roll you?</h4>
+              <h4>If you were a shape, how easily could I roll you down a hill?</h4>
               <select class="form-control" id="q3-ui">
                 <option value="">please choose one</option>
-                <option value="1">It would be hard</option>
-                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
-                <option value="1">I like curves and lines.</option>
-                <option value="1">Give me a full picture. Basic shapes are boring</option>
-                <option value="1">I demand complexity</option>
+                <option value="hard">It would be hard</option>
+                <option value="easy">It would be easy</option>
               </select>
             </div>
             <div class="survey-q" id="q4-content">
-              <h4>question4</h4>
+              <h4>Do you prefer short, medium or long names?</h4>
               <select class="form-control" id="q4-ui">
                 <option value="">please choose one</option>
-                <option value="1">The more sides the better</option>
-                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
-                <option value="1">I like curves and lines.</option>
-                <option value="1">Give me a full picture. Basic shapes are boring</option>
-                <option value="1">I demand complexity</option>
+                <option value="s">Short: Abbreviations are even better</option>
+                <option value="m">Medium: Enough letters to stand out</option>
+                <option value="l">Long: Give me a mouthfull.</option>
               </select>
             </div>
             <div class="survey-q" id="q5-content">
-              <h4>question5</h4>
+              <h4>Choose a Motto</h4>
               <select class="form-control" id="q5-ui">
                 <option value="">please choose one</option>
-                <option value="1">The more sides the better</option>
-                <option value="1">Basic shapes like squares and circles. Keep it simple.</option>
-                <option value="1">I like curves and lines.</option>
-                <option value="1">Give me a full picture. Basic shapes are boring</option>
-                <option value="1">I demand complexity</option>
+                <option value="m1">Do you even code-bruh?</option>
+                <option value="m2">Sometimes you’re the windshield, sometimes you’re the bug!</option>
+                <option value="m3">If you can’t convince them, confuse them…</option>
               </select>
             </div>
 
             <div class="button">
-              <button class="submit" type="button" name="button" id"submit">Submit</button>
+              <button class="submit" type="button" name="button" id"submit"><strong>Submit</strong></button>
             </div>
 
 
