add logic to various question values

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <option value="1">Heck yeah!</option>
                   <option value="-1">I've got an allergy...</option>
                   <option value="2">omg, I NEED the cuddles all the time!</option>
-                  <option value="-2">I hate animals (and I'm a terrible person)</option>
+                  <option value="-2">Animals can go to #%*@!! (and I'm a terrible person)</option>
                 </select>
               </div>
             </div>
@@ -77,7 +77,7 @@
             </div>
 
             <div class="button">
-              <button class="submit" type="button" name="button" id"submit"><strong>Submit</strong></button>
+              <button class="submit" type="button" name="button" id="submit"><strong>Submit</strong></button>
             </div>
 
 
