create an array to sort values.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </select>
             </div>
             <div class="survey-q" id="q3-content">
-              <h4>If you were a shape, how easily could I roll you down a hill?</h4>
+              <h4>How easily could I roll your preferred shape down a hill?</h4>
               <select class="form-control" id="q3-ui">
                 <option value="">please choose one</option>
                 <option value="hard">It would be hard</option>
@@ -89,7 +89,7 @@
     </div>
     <div class="row" id="results-row">
 
-      <div class="card" style="width: 18rem;" id="Ruby">
+      <div class="card" style="width: 18rem;" id="ruby">
         <img class="card-img-top" src="img/ruby.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Ruby</h5>
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;" id="c#">
+      <div class="card" style="width: 18rem;" id="csharp">
         <img class="card-img-top" src="img/csh.svg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">C#</h5>
